# testss

./: .gitignore  Makefile  README.md  a_maze_ing.py  conf.txt  config.py  config.txt  maze_generator.py  path_finder.py  print_maze.py  pyproject.toml
Music/: Makefile  README.md  a_maze_ing.py  config.py  config.txt  maze.txt  maze_generator.py  path_finder.py
Music/algorithms/: prim.py
Music/display/: terminal.py
Music/mazegen/: __init__.py
Music/mazegen/algorithms/: __init__.py  bfs.py
display/: __init__.py
mazegen/: generator.py
mazegen/algorithms/: dfs.py  prim.py
